# appliedgen

./: .env.example  .gitignore  PLAN.md  README.md  efficient_llm_inference.csv  efficient_llm_inference_anki.csv  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: streamlit_app.py
docs/: architecture-sketch.excalidraw
examples/domains/: README.md  ecosystem.yaml  fluid_dynamics.yaml  garden.yaml  heist_movie.yaml  kitchen.yaml  medieval_kingdom.yaml  pirate_adventure.yaml  sports_league.yaml  video_game.yaml
src/metaphor_machine/: __init__.py  cli.py
src/metaphor_machine/agents/: __init__.py  base.py  definer.py  explorer.py  transformer.py  translator.py
src/metaphor_machine/core/: __init__.py  pipeline.py  schemas.py
src/metaphor_machine/llm/: __init__.py  client.py  mock.py  providers.py
src/metaphor_machine/prompts/: check.py  domains.py  forbidden_words.yaml  language.py
src/metaphor_machine/storage/: __init__.py  markdown_store.py
tests/: test_definer.py  test_explorer_autonomous.py  test_explorer_translator.py  test_integration.py  test_language.py  test_llm_client.py  test_pipeline_model.py  test_schemas.py  test_session_load.py  test_transformer.py
tests/fixtures/: problems.yaml
