[project]
name = "metaphor-machine"
version = "0.1.0"
description = "Map problems into metaphors to brainstorm out-of-the-box solutions."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Dominic" },
]
dependencies = [
    "streamlit>=1.38",
    "litellm>=1.50",              # provider-agnostic LLM client (OpenAI + Anthropic + ...)
    "pydantic>=2.7",              # structured problem / metaphor schemas
    "python-dotenv>=1.0",
    "rich>=13.7",                 # nice CLI logging during development
    "pyyaml>=6.0",                # seed domain definitions
    "tenacity>=8.5",              # retries around LLM calls
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
